# cheime-core

./: %TEMP%meta.json  .gitignore  AGENTS.md  Cargo.toml  README.md  rust-toolchain.toml
apps/cheime-cli/: Cargo.toml
apps/cheime-cli/src/: main.rs  main_tests.rs
apps/cheime-cli/src/interactive/: app.rs  editor.rs  input.rs  log.rs  mod.rs  render.rs  session.rs  session_bound_tests.rs  session_cursor_tests.rs  session_dispatch_tests.rs  session_drain_action_tests.rs  session_drain_commit_tests.rs  session_drain_learning_tests.rs  session_review_tests.rs  session_terminal_tests.rs  session_tests.rs  session_visibility_tests.rs  terminal.rs  tui.rs
apps/cheime-cli/src/interactive/app/: app_tests.rs  blocking_tests.rs  platform_action_tests.rs  reducer_tests.rs
apps/cheime-cli/src/interactive/editor/: deletion_tests.rs  editor_tests.rs
apps/cheime-cli/src/interactive/input/: candidate_tests.rs  crossterm_tests.rs  input_tests.rs  modifier_tests.rs
apps/cheime-cli/src/interactive/log/: cleanup.rs  cleanup_tests.rs  lifecycle.rs  lifecycle_tests.rs  schema_tests.rs  simple_tests.rs  writer_tests.rs
apps/cheime-cli/src/interactive/render/: frame.rs  frame_tests.rs  render_tests.rs  writer.rs  writer_tests.rs
apps/cheime-cli/src/interactive/session/: drain.rs
apps/cheime-cli/tests/: integration.rs
config/schemas/: base.yaml  flypy.yaml  quanpin.yaml
crates/cheime-config/: Cargo.toml
crates/cheime-config/src/: deploy.rs  error.rs  layer.rs  layered.rs  lib.rs  merge.rs  merge_test.rs  profile.rs  schema.rs  state.rs
crates/cheime-diagnostics/: Cargo.toml
crates/cheime-diagnostics/src/: lib.rs
crates/cheime-dictionary/: Cargo.toml  review-findings.md
crates/cheime-dictionary/benches/: index_bench.rs
crates/cheime-dictionary/src/: body.rs  cache.rs  deploy.rs  header.rs  import.rs  index.rs  index_tests.rs  lib.rs  tiered.rs
crates/cheime-dictionary/tests/: tiered_integration.rs
crates/cheime-extension/: Cargo.toml
crates/cheime-extension/src/: host.rs  lib.rs  types.rs
crates/cheime-lua/: Cargo.toml
crates/cheime-lua/src/: lib.rs  runtime.rs
crates/cheime-model/: Cargo.toml
crates/cheime-model/src/: candidate.rs  ids.rs  input.rs  lib.rs  serde_tests.rs
crates/cheime-pipeline/: AGENTS.md  Cargo.toml
crates/cheime-pipeline/benches/: pipeline_bench.rs
crates/cheime-pipeline/src/: builtin.rs  decoder.rs  emoji.rs  factory.rs  filter.rs  key_mapper.rs  learning.rs  lib.rs  normalizer.rs  processor.rs  punctuator.rs  ranker.rs  segmentation.rs  segmentor.rs  segmentor.rs.bak  simplifier.rs  translator.rs  translator_tests.rs
crates/cheime-pipeline/tests/: stress_tests.rs
crates/cheime-protocol/: Cargo.toml
crates/cheime-protocol/src/: lib.rs  serde_tests.rs
crates/cheime-session/: AGENTS.md  Cargo.toml
crates/cheime-session/benches/: session_bench.rs
crates/cheime-session/src/: lib.rs  state.rs
crates/cheime-session/tests/: vertical_slice.rs
crates/cheime-tidx/: Cargo.toml
crates/cheime-tidx/src/: debug_test.rs  format.rs  lib.rs  reader.rs
crates/cheime-user-data/: Cargo.toml
crates/cheime-user-data/benches/: store_bench.rs
crates/cheime-user-data/src/: event.rs  lib.rs
crates/cheime-wire/: Cargo.toml
crates/cheime-wire/benches/: frame_bench.rs
crates/cheime-wire/src/: codec.rs  error.rs  frame.rs  handshake.rs  lib.rs
data/opencc/: s2t.tsv
docs/: CONFIG_DESIGN.md  DEV_PLAN.md  README.md  architecture.md  config.md  dictionary.md  getting-started.md  pipeline.md  schema.md
docs/superpowers/plans/: 2026-07-18-cheime-core-engine-host-protocol.md
docs/superpowers/specs/: 2026-07-18-cheime-engine-host-protocol.md  2026-07-18-cheime-windows-frontend-design.md
