[workspace]
members = [
    "crates/cheime-dictionary",
    "crates/cheime-model",
    "crates/cheime-pipeline",
    "crates/cheime-protocol",
    "crates/cheime-session",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MPL-2.0"
repository = "https://github.com/cheime/cheime-core"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2.0"
