[workspace]
members = [
    "apps/cheime-cli",
    "crates/cheime-config",
    "crates/cheime-diagnostics",
    "crates/cheime-dictionary",
    "crates/cheime-extension",
    "crates/cheime-lua",
    "crates/cheime-model",
    "crates/cheime-pipeline",
    "crates/cheime-protocol",
    "crates/cheime-tidx",
    "crates/cheime-user-data",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MPL-2.0"
repository = "https://github.com/cheime/cheime-core"

[workspace.dependencies]
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }
parking_lot = "0.12"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
memmap2 = "0.9"
serde_yaml = "0.9"
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3"
thiserror = "2.0"
criterion = { version = "0.5", features = ["html_reports"] }

[workspace.metadata.bench]
criterion = { version = "0.5" }
