[package]
name = "cheime-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "cheime"
path = "src/main.rs"

[dependencies]
cheime-config = { path = "../../crates/cheime-config" }
cheime-dictionary = { path = "../../crates/cheime-dictionary" }
cheime-model = { path = "../../crates/cheime-model" }
cheime-pipeline = { path = "../../crates/cheime-pipeline" }
cheime-protocol = { path = "../../crates/cheime-protocol" }
cheime-session = { path = "../../crates/cheime-session" }
cheime-user-data = { path = "../../crates/cheime-user-data" }
parking_lot.workspace = true
serde_yaml.workspace = true
