[package]
name = "cheime-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "cheime"
path = "src/main.rs"

[dependencies]
cheime-config = { path = "../../crates/cheime-config" }
cheime-dictionary = { path = "../../crates/cheime-dictionary" }
cheime-model = { path = "../../crates/cheime-model" }
cheime-pipeline = { path = "../../crates/cheime-pipeline" }
cheime-protocol = { path = "../../crates/cheime-protocol" }
cheime-session = { path = "../../crates/cheime-session" }
cheime-user-data = { path = "../../crates/cheime-user-data" }
parking_lot.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
serde.workspace = true
crossterm = "0.29"
unicode-width = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
tempfile.workspace = true
