[package]
name = "cheime-dictionary"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cheime-model = { path = "../cheime-model" }
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
