[package]
name = "cheime-dictionary"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cheime-model = { path = "../cheime-model" }
cheime-tidx = { path = "../cheime-tidx" }
rmp-serde.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "index_bench"
harness = false
