[package]
name = "cheime-lua"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cheime-extension = { path = "../cheime-extension" }
cheime-model = { path = "../cheime-model" }
mlua.workspace = true
serde.workspace = true
thiserror.workspace = true
