[package]
name = "cheime-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cheime-dictionary = { path = "../cheime-dictionary" }
cheime-model = { path = "../cheime-model" }
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "pipeline_bench"
harness = false
