[package]
name = "cheime-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cheime-config = { path = "../cheime-config" }
cheime-dictionary = { path = "../cheime-dictionary" }
cheime-model = { path = "../cheime-model" }
thiserror.workspace = true
[dev-dependencies]
serde_yaml.workspace = true
criterion.workspace = true

[[bench]]
name = "pipeline_bench"
harness = false
