[package]
name = "cheime-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cheime-config = { path = "../cheime-config" }
cheime-dictionary = { path = "../cheime-dictionary" }
cheime-model = { path = "../cheime-model" }
cheime-user-data = { path = "../cheime-user-data" }
parking_lot.workspace = true
thiserror.workspace = true
[dev-dependencies]
serde_yaml.workspace = true
criterion.workspace = true

[[bench]]
name = "pipeline_bench"
harness = false
