[package]
name = "cheime-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cheime-model = { path = "../cheime-model" }
cheime-pipeline = { path = "../cheime-pipeline" }
cheime-protocol = { path = "../cheime-protocol" }
thiserror.workspace = true
