[package]
name = "cheime-user-data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cheime-model = { path = "../cheime-model" }
serde.workspace = true
thiserror.workspace = true
[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "store_bench"
harness = false
