[package]
name = "cheime-user-data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cheime-model = { path = "../cheime-model" }
parking_lot.workspace = true
rusqlite = { version = "0.31", features = ["bundled"] }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "store_bench"
harness = false
