[package]
name = "cheime-wire"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cheime-model = { path = "../cheime-model" }
cheime-protocol = { path = "../cheime-protocol" }
rmp-serde.workspace = true
serde.workspace = true
thiserror.workspace = true
[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "frame_bench"
harness = false
